# mobile-robotframework-automation

./: .gitignore  Jenkinsfile  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
resources/: base.resource
resources/elements/: contactsElements.yml  createContactElements.yml  editContactElements.yml  viewContactElements.yml
resources/pages/: basePage.resource  contactsPage.resource  createContactPage.resource  editContactPage.resource  viewContactPage.resource
resources/utils/: customKeywords.resource  fakerObjects.resource  openApp.resource
settings/: browserstack_android_config.yaml
tests/: ContactTest.robot
